[project]
name = "stellar-kg-builder"
license = "Apache-2.0"
version = "0.1.0"
description = "A simple tool to generate knowledge graphs from documents"
authors = [
    {name = "Samuel Galvão Elias", email = "sgelias@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j (>=5.28.2,<6.0.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "docling (>=2.48.0,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
mypy = "^1.17.1"
black = "^25.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
