[project]
name = "stellar-kg-builder"
license = "Apache-2.0"
version = "0.1.0"
description = "A simple tool to generate knowledge graphs from documents"
authors = [{ name = "Samuel Galvão Elias", email = "sgelias@outlook.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "neo4j (>=5.28.2,<6.0.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "docling (>=2.48.0,<3.0.0)",
    "rich-click (>=1.8.9,<2.0.0)",
    "termcolor (>=3.1.0,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "langchain-neo4j (>=0.5.0,<0.6.0)",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
mypy = "^1.17.1"
black = "^25.1.0"
flake8 = "^7.3.0"

[project.urls]
Homepage = "https://github.com/LepistaBio/stellar-kg-builder"

[tool.poetry]
packages = [
    { include = "stellar_kg_builder", from = "src" },
    { include = "tests", from = "src" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ? ----------------------------------------------------------------------------
# ? Entrypoint
# ? ----------------------------------------------------------------------------

[tool.poetry.scripts]
stellar-cli = "stellar_kg_builder.ports.cli.main:main"

# ? ----------------------------------------------------------------------------
# ? Code consistence
# ? ----------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
exclude = ["build/", "dist/", "docs/", "venv/"]
ignore_missing_imports = true
follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
namespace_packages = false
disallow_untyped_defs = true

[tool.attrs-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.flake8]
ignore = "E722, W503, E501, E203"
per-file-ignore = "**/__init__.py: F401"
